# Javelin

./: ARCHITECTURE.md  Cargo.toml  README.md  bacon.toml  financialCloseFinalReport.md  rust-toolchain.toml  rustfmt.toml
crates/javelin-adapter/: Cargo.toml
crates/javelin-adapter/src/: controller.rs  error.rs  error_handler.rs  input_mode.rs  lib.rs  page_states.rs  presenter.rs  view_router.rs  views.rs
crates/javelin-adapter/src/controller/: account_master_controller.rs  application_settings_controller.rs  batch_history_controller.rs  closing_controller.rs  company_master_controller.rs  journal_entry_controller.rs  ledger_controller.rs  record_user_action_controller.rs  search_controller.rs  subsidiary_account_master_controller.rs
crates/javelin-adapter/src/navigation/: controllers.rs  end_to_end_tests.rs  memory_leak_tests.rs  navigation_property_tests.rs  navigation_stack_tests.rs  presenter_registry.rs  route.rs
crates/javelin-adapter/src/page_states/: account_adjustment_page_state.rs  closing_preparation_page_state.rs  financial_statement_execution_page_state.rs  financial_statement_page_state.rs  home_page_state.rs  ifrs_valuation_execution_page_state.rs  ifrs_valuation_page_state.rs  journal_entry_page_state.rs  ledger_consolidation_page_state.rs  search_page_state.rs
crates/javelin-adapter/src/presenter/: account_master_presenter.rs  application_settings_presenter.rs  company_master_presenter.rs  journal_entry_presenter.rs  ledger_presenter.rs  search_presenter.rs  subsidiary_account_master_presenter.rs
crates/javelin-adapter/src/views/: components.rs  layouts.rs  page_navigator.rs  pages.rs
crates/javelin-adapter/src/views/components/: data_table.rs  event_viewer.rs  form.rs  input_field.rs  menu.rs  status_bar.rs  table.rs
crates/javelin-adapter/src/views/layouts/: form_layout.rs  main_layout.rs
crates/javelin-adapter/src/views/pages/: account_adjustment_page.rs  account_master_page_refactored.rs  application_settings_page_refactored.rs  closing_page.rs  closing_preparation_page.rs  financial_statement_page.rs  home_page.rs  ifrs_valuation_page.rs  journal_entry_form_page.rs  journal_entry_page.rs  ledger_consolidation_page.rs  ledger_page.rs  ledger_view_page.rs  search_page.rs  subsidiary_account_master_page_refactored.rs
crates/javelin-domain/: Cargo.toml
crates/javelin-domain/src/: error.rs  event.rs  financial_close.rs  lib.rs  repositories.rs  service.rs  value_object.rs
crates/javelin-domain/src/financial_close/: journal_entry.rs
crates/javelin-domain/src/financial_close/journal_entry/: services.rs  (+1 more)
crates/javelin-domain/src/repositories/: application_settings_repository.rs  event_repository.rs  user_action_repository.rs
crates/javelin-infrastructure/: Cargo.toml
crates/javelin-infrastructure/src/: commands.rs  error.rs  event_store.rs  journal_entry_finder_impl.rs  lib.rs  projection_db.rs  queries.rs  repositories.rs  services.rs
crates/javelin-infrastructure/src/commands/: accounting_period_repository_impl.rs  journal_entry_repository_impl.rs  repository_impl.rs  user_action_repository_impl.rs
crates/javelin-infrastructure/src/event_store/: event_store.rs  event_store_repository_impl.rs
crates/javelin-infrastructure/src/projections/: projection_builder_impl.rs
crates/javelin-infrastructure/src/queries/: journal_entry_projection_worker.rs  journal_entry_search_projection.rs  master_data_loader_impl.rs
crates/javelin-infrastructure/src/services/: voucher_number_generator_impl.rs
crates/javelin-infrastructure/src/tests/: event_store_property_tests.rs  event_store_unit_tests.rs  ledger_query_service_property_tests.rs  projection_builder_property_tests.rs
(+67 files in other folders)
