[package]
name = "javelin-infrastructure"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
javelin-domain = { workspace = true }
javelin-application ={ workspace = true }

# External dependencies
thiserror = { workspace = true }
tokio = { workspace = true }
lmdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
